--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "moment-timezone": "^0.5.23",
     "mongodb": "^3.1.0-beta4",
+    "node-cron": "^2.0.3",
     "toto-api-controller": "^4.2.0",
     "toto-event-consumer": "^6.2.0",
     "toto-event-publisher": "6.2.0"
