--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Login to Dockerhub
-      run: docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_PSWD}}
+      run: echo ${{secrets.DOCKERHUB_PSWD}} | docker login -u ${{secrets.DOCKERHUB_USER}} --password-stdin
 
     - name: Build Docker image
       run: docker build . -t nicolasances/toto-nodems-expenses
