--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,11 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Echo build version
-      run: echo $GITHUB_RUN_NUMBER
-
     - name: Login to Dockerhub
       run: echo ${{secrets.DOCKERHUB_PSWD}} | docker login -u ${{secrets.DOCKERHUB_USER}} --password-stdin
 
     - name: Build Docker image
-      run: docker build . -t nicolasances/toto-nodems-expenses
+      run: docker build . -t nicolasances/toto-nodems-expenses:1.$GITHUB_RUN_NUMBER
 
     - name: Push Docker image to Dockerhub 
-      run: docker push nicolasances/toto-nodems-expenses
+      run: docker push nicolasances/toto-nodems-expenses:1.$GITHUB_RUN_NUMBER
