--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,15 @@ jobs:
 
     - name: Login to Dockerhub
       run: echo ${{secrets.DOCKERHUB_PSWD}} | docker login -u ${{secrets.DOCKERHUB_USER}} --password-stdin
+    
+    - name: Retrieve new version number
+      run: | 
+       PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
+       echo ::set-output name=current-version::$PACKAGE_VERSION
 
     - name: Build Docker image
-      run: docker build . -t nicolasances/toto-nodems-expenses:1.$GITHUB_RUN_NUMBER
+      run: docker build . -t nicolasances/toto-nodems-expenses:${{ steps.package-version.outputs.current-version}}
 
     - name: Push Docker image to Dockerhub 
-      run: docker push nicolasances/toto-nodems-expenses:1.$GITHUB_RUN_NUMBER
+      run: docker push nicolasances/toto-nodems-expenses:${{ steps.package-version.outputs.current-version}}
+    
