--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,6 @@ jobs:
     - name: Retrieve new version number
       run: | 
        export PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
+       echo $PACKAGE_VERSION
 
-    - name: Build Docker image
-      run: docker build . -t nicolasances/toto-nodems-expenses:$PACKAGE_VERSION
-
-    - name: Push Docker image to Dockerhub 
-      run: docker push nicolasances/toto-nodems-expenses:$PACKAGE_VERSION
     
