--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-cron": "^2.0.3",
     "toto-api-controller": "^4.7.2",
     "toto-event-consumer": "^6.2.0",
-    "toto-event-publisher": "6.2.0"
+    "toto-event-publisher": "6.2.0", 
+    "request": "2.88.2"
   }
 }
