--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -46,4 +46,4 @@ jobs:
     
     - name: Deploy image
       run: | 
-        gcloud run deploy ${{env.PACKAGE_NAME}} --project=${{ secrets.GCP_PID }} --image=eu.gcr.io/${{ secrets.GCP_PID }}/${{env.PACKAGE_NAME}}:${{env.PACKAGE_VERSION}} --platform=managed --region=europe-west1
+        gcloud run deploy ${{env.PACKAGE_NAME}} --project=${{ secrets.GCP_PID }} --image=eu.gcr.io/${{ secrets.GCP_PID }}/${{env.PACKAGE_NAME}}:${{env.PACKAGE_VERSION}} --platform=managed --region=europe-west1 --allow-unauthenticated
