--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -47,4 +47,4 @@ jobs:
     
     - name: Deploy image
       run: | 
-        gcloud run deploy ${{env.PACKAGE_NAME}} --set-env-vars "MONGO_HOST=${{ secrets.MONGO_HOST }},MONGO_USER=${{ secrets.MONGO_USER }},MONGO_PWD=${{ secrets.MONGO_PWD }},AUTHORIZED_CLIENT_ID=${{ secrets.AUTHORIZED_CLIENT_ID }}" --service-account=${{ secrets.DEV_MICROSERVICE_ACCOUNT }} --project=${{ secrets.GCP_PID }} --image=eu.gcr.io/${{ secrets.GCP_PID }}/${{env.PACKAGE_NAME}}:${{env.PACKAGE_VERSION}} --platform=managed --region=europe-west1 --allow-unauthenticated
+        gcloud run deploy ${{env.PACKAGE_NAME}} --set-env-vars "MONGO_HOST=${{ secrets.MONGO_HOST }},MONGO_USER=${{ secrets.MONGO_USER }},MONGO_PWD=${{ secrets.MONGO_PWD }},AUTHORIZED_CLIENT_ID=${{ secrets.AUTHORIZED_CLIENT_ID }}" --service-account=${{ secrets.MICROSERVICE_ACCOUNT }} --project=${{ secrets.GCP_PID }} --image=eu.gcr.io/${{ secrets.GCP_PID }}/${{env.PACKAGE_NAME}}:${{env.PACKAGE_VERSION}} --platform=managed --region=europe-west1 --allow-unauthenticated
