--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - 'feature/**'
+      - master
 
 jobs:
   # This workflow contains a single job called "release"
